--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,24 @@
 
 	<dependencies>
 		<dependency>
+            		<groupId>org.springframework.boot</groupId>
+            		<artifactId>spring-boot-starter-web</artifactId>
+        	</dependency>
+		 <dependency>
+            		<groupId>org.springframework.boot</groupId>
+           		<artifactId>spring-boot-starter-security</artifactId>
+        	</dependency>
+        	<dependency>
+            		<groupId>io.jsonwebtoken</groupId>
+            		<artifactId>jjwt</artifactId>
+            		<version>0.9.1</version>
+        	</dependency>
+        	<dependency>
+            		<groupId>org.springframework.boot</groupId>
+            		<artifactId>spring-boot-starter-data-jpa</artifactId>
+            		<version>2.1.8.RELEASE</version>
+        	</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
