--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/test
 spring.datasource.username=postgres
 spring.datasource.password=root
+#jwt.secret=javainuse
+spring.jpa.hibernate.ddl-auto=create-drop
