--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/tenis_db
 spring.datasource.username=postgres
 spring.datasource.password=root
+jwt.secret=iisproject
+jwt.get.token.uri=/authenticate
